--- a/blogpost.html
+++ b/blogpost.html
@@ -9,15 +9,9 @@
     <div id="container">
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" /> Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-<<<<<<< HEAD
-            <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
-            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-            <p>Suscribete y dale like</p>
-=======
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
@@ -26,7 +20,6 @@
         </div>
         <div id="footer">
             Hecho con amor en Platzi &lt;3
->>>>>>> footer
         </div>
     </div>
 </body>
