--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a Hyperblog 2.0</title>
+    <title>Hyperblog 2.0 es un blog del futuro</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
@@ -12,10 +12,10 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
-            <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
-            </p>
+            <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
+            <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+            <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+            <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
         <div id="footer">
